<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signin.SignInFragment"
    android:background="@color/sign_up_secondary_background"
    android:orientation="vertical"
    android:weightSum="10">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/coffeeshot_logo"
            android:layout_gravity="center"/>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/actionsheetbackground"
        android:layout_gravity="bottom"
        android:elevation="20dp"
        android:layout_weight="8">

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="70dp"
            android:text="@string/sign_up_title"
            android:textSize="28sp"
            android:textColor="@color/sign_up_button"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/sign_up_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="70dp"
            android:paddingEnd="30dp"
            android:text="@string/sign_in_description"
            android:textSize="14sp"
            android:textColor="@color/sign_up_button"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sign_up_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="70dp"
            android:elevation="6dp"
            android:background="@drawable/text_input_shape"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_or_phone"
                android:textColorHint="@color/hint"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_email_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="70dp"
            android:elevation="6dp"
            android:background="@drawable/text_input_shape"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/hint"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/sign_up_button"
            app:layout_constraintTop_toBottomOf="@id/et_password_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="70dp"
            android:text="@string/login"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/no_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:textColor="@color/text_blue"
            android:text="@string/forgot_password"/>

        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/register_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:textColor="@color/hint"
            android:text="@string/no_account"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/sign_up_button"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="90dp"
            android:layout_marginHorizontal="70dp"
            android:text="@string/create_new_account"
            android:textSize="14sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>