<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.editproduct.EditProductFragment"
    android:background="@color/main_background">
    
    <FrameLayout
        android:id="@+id/green_frame"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/green"/>

    <ImageView
        android:id="@+id/ic_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/green_frame"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:src="@drawable/ic_product" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/green_frame"
        app:layout_constraintStart_toEndOf="@id/ic_product"
        android:layout_marginStart="50dp"
        android:text="@string/product_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_cup_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/green_frame"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/cup_size"
        android:textStyle="bold"
        android:textSize="16sp"/>
    
    <Spinner
        android:id="@+id/cup_size_spinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_cup_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/spinner_shape"
        android:elevation="6dp"
        android:entries="@array/cup_sizes" />

    <TextView
        android:id="@+id/tv_sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cup_size_spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/sugar"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/sugar_spinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/spinner_shape"
        android:elevation="6dp"
        android:entries="@array/cup_sizes" />

    <TextView
        android:id="@+id/tv_syrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sugar_spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/syrup"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/syrup_spinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_syrup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/spinner_shape"
        android:elevation="6dp"
        android:entries="@array/syrups" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/add_cart"
        android:textSize="18sp"
        android:backgroundTint="@color/green"/>

</androidx.constraintlayout.widget.ConstraintLayout>